[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/LikesGenerator/NpcLikesLineUI.gd" type="Script" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]

[node name="NpcLikesLineUI" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 20.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = -1.0
margin_right = 1042.0
margin_bottom = 24.4
size_flags_horizontal = 3
text = "Cum on body"

[node name="Button" type="Button" parent="."]
margin_left = 1045.0
margin_right = 1090.0
margin_bottom = 25.0
text = "Hates"

[node name="Button2" type="Button" parent="."]
margin_left = 1093.0
margin_right = 1112.0
margin_bottom = 25.0
text = "---"

[node name="Button3" type="Button" parent="."]
margin_left = 1115.0
margin_right = 1129.0
margin_bottom = 25.0
text = "--"

[node name="Button4" type="Button" parent="."]
margin_left = 1132.0
margin_right = 1141.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 35.9107, -79.9766 )
text = "-"

[node name="Button5" type="Button" parent="."]
margin_left = 1144.0
margin_right = 1157.0
margin_bottom = 25.0
text = "0"

[node name="Button6" type="Button" parent="."]
margin_left = 1160.0
margin_right = 1173.0
margin_bottom = 25.0
text = "+"

[node name="Button7" type="Button" parent="."]
margin_left = 1176.0
margin_right = 1198.0
margin_bottom = 25.0
text = "++"

[node name="Button8" type="Button" parent="."]
margin_left = 1201.0
margin_right = 1232.0
margin_bottom = 25.0
text = "+++"

[node name="Button9" type="Button" parent="."]
margin_left = 1235.0
margin_right = 1280.0
margin_bottom = 25.0
text = "Loves"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_Button9_pressed"]
